--- a/index.html
+++ b/index.html
@@ -3,38 +3,9 @@
 	<head>
 		<title>Hunting Github</title>
 		<meta charset="UTF-8">
-		<style type="text/css">
-			body {background-color: silver;}
-			#btn, #content {
-				box-shadow: 3px 3px 5px black; 
-			}
-			#content {
-				background-color: rgb(240,240,240); 
-				min-height: 100px; 
-				max-width: 700px;
-
-				margin: 25px auto; 
-				overflow: auto;
-				padding: 10px;  
-			}
-			b {
-				background-color: yellow;
-				padding: 0px 5px; 
-			}
-			h2 {text-align: center;}
-		</style>
+		<link rel="stylesheet" type="text/css" href="styles.css">
 		<script src="bower_components/jquery/dist/jquery.js"></script>
-		<script>
-			$(document).ready(function(){
-				$.get("https://api.github.com/users/jcareergoals", displayName);
-				function displayName(data){
-					console.log(data); 
-					for(i in data){
-						$('#content').append("<p><b>" + i + "</b>: " + data[i] + "</p>"); 
-					}
-				} 
-			}); 
-		</script>
+		<script src="javascript.js"></script>
 	</head>
 	<body>
 		<button id="btn">Get User Account Info</button>
