Implemented feature that allows users to search usernames against the api to recieve data

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 		<script src="javascript.js"></script>
 	</head>
 	<body>
-		<button id="btn">Get User Account Info</button>
+		<form action="" method="post">
+			<div>
+				<input id="username" type='text' name="username" placeholder="username">
+			</div>
+			<button type='submit' id='btn'>Get User Account Info</button>
+		</form>
+
 		<div id="content">
 			<h2>Account Information</h2>
 		</div>
